--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</a>
 				</li>
 				<li data-hovercolor="#fff">
-					<a href="#">
+					<a href="evaluation.html">
 						<h4 data-type="mText" class="sti-item">在线评价</h4>
 						<p data-type="sText" class="sti-item">The Online Evaluation</p>
 						<span data-type="icon" class="sti-icon glyphicon glyphicon-apple sti-item"></span>
