--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</a>
 				</li>
 				<li data-hovercolor="#fff">
-					<a href="#">
+					<a href="map.html">
 						<h4 data-type="mText" class="sti-item">紧急求救</h4>
 						<p data-type="sText" class="sti-item">Online Emergency Appointment</p>
 						<span data-type="icon" class="sti-icon glyphicon glyphicon-education sti-item"></span>
