--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			}
 		</script>
 		<!-- banner -->
-		<div class="banner">
+		<!--<div class="banner">
 			<div class="logo">
 				<h1><a href="index.html">HOSPITAL</a></h1>
 			</div>
@@ -161,13 +161,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a class="scroll" href="#banner-bottom"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<!-- //banner -->
 		<!-- banner-bottom -->
 		<div id="banner-bottom" class="banner-bottom">
 			<div class="container">
 				<h3 class="tittle">病历智能纠错系统</h3>
-				<p> xxxxxxxxxxxxxxxxxxxxx </p>
+				<p> emmmmmmm想不出要写什么好 </p>
 				<ul id="sti-menu" class="sti-menu">
 					<li data-hovercolor="#fff">
 						<a href="#">
