--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p> emmmmmmm想不出要写什么好 </p>
 				<ul id="sti-menu" class="sti-menu">
 					<li data-hovercolor="#fff">
-						<a href="#">
+						<a href="error.html">
 							<h4 data-type="mText" class="sti-item">智能纠错</h4>
 							<p data-type="sText" class="sti-item">Intelligent Error-correction</p>
 							<span data-type="icon" class="sti-icon glyphicon glyphicon-plus sti-item"></span>
