--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div id="banner-bottom" class="banner-bottom">
 			<div class="container">
 				<h3 class="tittle">病历智能纠错系统</h3>
-				<p> emmmmmmm想不出要写什么好 </p>
+				<p> 打造病历管理与健康助手一体化平台 </p>
 				<ul id="sti-menu" class="sti-menu">
 					<li data-hovercolor="#fff">
-						<a href="error.html">
+						<a href="show.html">
 							<h4 data-type="mText" class="sti-item">智能纠错</h4>
 							<p data-type="sText" class="sti-item">Intelligent Error-correction</p>
 							<span data-type="icon" class="sti-icon glyphicon glyphicon-plus sti-item"></span>
